kubernetes/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: exam
spec:
  containers:
  - name: debug-container
    image: ubuntu:latest
    command: ["/bin/sleep", "3600"]
