kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #     nodePort: 31000
  # type: NodePort


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: cobrlt/frontend:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http-port
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          # env:
          #   - name: CUSTOM_BACKEND_URL
          #     value: http://backend-service:8080/api/tutorials
          #-------------------------    
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 15
          # startupProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   failureThreshold: 30
          #   periodSeconds: 10
