kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: app-ingress 
  annotations: 
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/add-base-url: "true" 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  rules: 
    - host: exam-aseds-ine2.com 
      http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: frontend-service 
                port:  
                        number: 80
